@@ -1,3 +1,11 @@
 ## jar-net-filter copy from ja-netfilter
 
 just for using ideaj
+
+> add jdk options in idea64.exe.vmoptions
+
+```
+--add-opens=java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED
+-javaagent:D://..//..//ja-netfilter.jar (replace your directory path)
+```
